# web_labs

./: .gitignore  LICENSE
lab1/: README.md  index.html
lab1/static/css/: style.css
lab2/: index.html
lab2/static/css/: style.css
web-project/: docker-compose.yml  index.html  package-lock.json  package.json  vite.config.js
web-project/back/: Dockerfile  README.md  package-lock.json  pyproject.toml
web-project/back/app/: main.py
web-project/back/app/database/: api.py  engine.py
web-project/back/app/database/models/: base.py  user.py
web-project/back/app/database/schemas/: user.py
web-project/back/app/db/: crud.py  database.py  models.py
web-project/back/app/ends/: users.py
web-project/back/app/routers/: user.py
web-project/back/app/utils/: settings.py
web-project/back/app/utils/adjust/: number.py
web-project/back/app/utils/enums/: group.py
web-project/back/app/utils/migrations/: env.py
web-project/back/app/utils/migrations/versions/: 2024_10_24_1913-ee22999e027d_first_migration.py  2024_10_25_1237-62ae86b730f8_changing_number_from_int_to_bigint.py
web-project/front/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
web-project/front/src/components/: Admin.vue  Animation.vue  Auth.vue  Cards.vue  Carousel.vue  (+5 more)
web-project/src/: App.vue
web-project/src/components/: Admin.vue  Animation.vue  Auth.vue  Cards.vue  Carousel.vue  Chat.vue  Faq.vue  Footerbar.vue  Navbar.vue  Rectangle.vue  Rectengular.vue  Transliteration.vue
web-project/src/css/: preloader.css
web-project/src/js/: main.js  preloader.js  router.js
(+4 files in other folders)
