[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Volodymyr Klimchuk", email = "ke1wi.ua@gmail.com" }
]
dependencies = [
    "fastapi[standard]>=0.115.2",
    "sqlalchemy>=2.0.36",
    "pydantic-settings>=2.6.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.1.1",
    "alembic>=1.13.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.7.0",
    "black>=24.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/back"]
